--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <script defer src="./main.js"></script>
 </head>
 
+<!-- DOM -->
+
 <body>
     <h1>PreEntrega1---MontiJonathanJesus</h1>
+
+    <h1>PRODUCTOS</h1>
+
+    <section id="products-container">
+
+    </section>
+
+    <h2><a href="./cart.html">Ir al Carrito</a></h2>
 </body>
 
 </html>
